--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
       <link/>
     </head>
     <body>
-      <p> Ceci est le premier Titre ! </p>
+      <p> Bonjour ! </p>
+      <h1> Titre TiTrE titrE </h1>
     </body>
   </html>
